--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,3 +1,8 @@
-satheesh kumar s
-satheesh kumar s
-satheesh kumar s
+name: My First GitHub Action
+on: [push]
+jobs:
+  print-hello-world:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Hello World!!!"
+      - run: echo "This is my step number 2"
